--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-    "name": "fast-json-patch",
+    "name": "ordered-fast-json-patch",
     "version": "3.1.1",
-    "description": "Fast implementation of JSON-Patch (RFC-6902) with duplex (observe changes) capabilities",
-    "homepage": "https://github.com/Starcounter-Jack/JSON-Patch",
+    "description": "Fast implementation of JSON-Patch (RFC-6902) with duplex (observe changes) capabilities and object key reordering support",
+    "homepage": "https://github.com/javisantos/ordered-fast-json-patch",
     "keywords": [
         "json",
         "patch",
         "http",
-        "rest"
+        "rest",
+        "reorder",
+        "object-keys"
     ],
     "repository": {
         "type": "git",
-        "url": "git://github.com/Starcounter-Jack/JSON-Patch.git"
+        "url": "git://github.com/javisantos/ordered-fast-json-patch.git"
     },
     "bugs": {
-        "url": "https://github.com/Starcounter-Jack/JSON-Patch/issues"
+        "url": "https://github.com/javisantos/ordered-fast-json-patch/issues"
     },
     "author": {
         "name": "Joachim Wester",
